--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="#" class="navbar-brand">ARTÍCULOS-PHP-AJAX</a>
         <form class="navbar-nav ml-auto">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" id="search" placeholder="Busca un artículo" autocomplete="off">
+            <!-- <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button> -->
         </form>
         </div>
     </nav>
