--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <title>Artículos</title>
 </head>
 
-<body class="container">
+<body class="container animate__animated animate__fadeIn">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a href="#" class="navbar-brand">ARTÍCULOS-PHP-AJAX</a>
         <form class="navbar-nav ml-auto">
             <input class="form-control mr-sm-2" type="search" id="search" placeholder="Busca un artículo" autocomplete="off">
-            <!-- <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button> -->
         </form>
         </div>
     </nav>
@@ -33,14 +32,17 @@
         <div class="form-group">
             <label>Autor</label>
             <input type="text" class="form-control" id="autor">
+            <small id="autorRequerido" class="text-danger">Campo requerido</small>
         </div>
         <div class="form-group">
             <label>Título</label>
             <input type="text" class="form-control" id="titulo">
+            <small id="tituloRequerido" class="text-danger">Campo requerido</small>
         </div>
         <div class="form-group">
             <label>Cuerpo</label>
             <textarea class="form-control" id="cuerpo" cols="30" rows="10"></textarea>
+            <small id="cuerpoRequerido" class="text-danger">Campo requerido</small>
         </div>
         <div class="from-group row">
             <div class="col">
