--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://kit.fontawesome.com/9fe0b4e47c.js" crossorigin="anonymous"></script>
-    <title>Artículos</title>
+    <title>CRUD-PHP-AJAX</title>
 </head>
 
 <body class="container animate__animated animate__fadeIn">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">ARTÍCULOS-PHP-AJAX</a>
+    <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
+        <a href="#" class="navbar-brand">CRUD-PHP-AJAX</a>
         <form class="navbar-nav ml-auto">
             <input class="form-control mr-sm-2" type="search" id="search" placeholder="Busca un artículo" autocomplete="off">
         </form>
@@ -22,7 +22,7 @@
     <div class="row my-4">
         <div class="col text-right">
             <button class="btn btn-success" id="nuevo">
-                <i class="fa fa-plus mr-1"></i> Nuevo artículo
+                <i class="fa fa-plus mr-1"></i> Formulario
             </button>
         </div>
     </div>
